# ai

./: API.md  Cargo.toml  DEVELOPMENT_PLAN.md  PROJECT_STATUS.md  QUICK_START.md  README.md
qiskit_proto/: quantum_search.py
src/: active_learning.rs  api.rs  attention_gpu.rs  attention_logic.rs  core.rs  embedding_cache.rs  graph_cache.rs  knowledge_graph.rs  lib.rs  logic_attention.rs  main.rs  segment.rs  text_processor.rs  trusted_scraper.rs
tests/: fuzzing.rs  integration.rs  text_processing.rs
